@@ -221,7 +221,6 @@ tasks {
     }
 
     buildSearchableOptions {
-        jvmArgs("-Djava.security.manager=com.intellij.platform.core.nio.fs.CoreBootstrapSecurityManager")
         enabled = isReleaseBuild
     }
 
